logo part added

--- a/index.html
+++ b/index.html
@@ -80,6 +80,23 @@
         </section>
 
 
+         <section>
+            <div class="head_box">
+             
+                <div class="logo_part">
+                   <ul>
+                      <li> <img src="./logos/Alibaba.svg" alt="logo"></li>
+                      <li> <img src="./logos/Amazon.svg" alt="logo"></li>
+                      <li> <img src="./logos/Daraz.pk Logo.svg" alt="logo"></li>
+                      <li> <img src="./logos/Ebay.svg" alt="logo"></li>
+                      <li> <img src="./logos/Rakuten.svg" alt="logo"></li>
+                      <li> <img src="./logos/Target.svg" alt="logo"></li>
+                      <li> <img src="./logos/Walmart.svg" alt="logo"></li>
+                   </ul>
+                </div>
+               
+            </div>
+         </section>
 
        </main>
 
